// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency model tracks dependency sets correctly 1`] = `
Set {
  BindingInstance {
    "factory": [Function],
    "joined": "foo.bar",
    "split": Array [
      "foo",
      "bar",
    ],
  },
}
`;

exports[`dependency model tracks dependency sets correctly 2`] = `
Set {
  BindingInstance {
    "factory": [Function],
    "joined": "foo.baz",
    "split": Array [
      "foo",
      "baz",
    ],
  },
  BindingInstance {
    "factory": [Function],
    "joined": "foo.bad",
    "split": Array [
      "foo",
      "bad",
    ],
  },
}
`;

exports[`dependency model tracks dependency sets correctly 3`] = `
Set {
  BindingInstance {
    "factory": [Function],
    "joined": "foo.bar",
    "split": Array [
      "foo",
      "bar",
    ],
  },
  BindingInstance {
    "factory": [Function],
    "joined": "foo.baz",
    "split": Array [
      "foo",
      "baz",
    ],
  },
  BindingInstance {
    "factory": [Function],
    "joined": "foo.bad",
    "split": Array [
      "foo",
      "bad",
    ],
  },
}
`;
